--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -27,16 +27,26 @@ nav{
         
         transition: color 0.2s;
 
+        & + a{
+            margin-left:2rem;
+        }
+
         &:hover{
             color:var(--white);
         }
+
+        &.active{
+            color:var(--white);
+            font-weight: bold;
+        }
+
         &.active::after{
             content: '';
             height: 3px;
             border-radius: 3px 3px 0 0;
             width:100%;
             position: absolute;
-            bottom:0;
+            bottom:1px;
             left: 0;
             background: var(--yelow-500);
            
