--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -3,8 +3,10 @@
     height: 4rem;
     border: 0;
     border-radius: 2rem;
-    background: var(--yellow-500);
-    color: var(--gray-400);
+    background: var(--yelow-500);
+    color: var(--gray-900);
+    font-size:1.25rem;
+    font-weight:bold;
 
     display: flex;
     align-items: center;
